--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </script>
 </head>
 
-<body style="background-image: url('https://i.ytimg.com/vi/T9dp7nsEQ9s/maxresdefault.jpg');">
+<body style="background-image: url('https://live.staticflickr.com/663/21805468551_4fa9d8f9d4.jpg');">
     <div class="container-fluid">
         <h1 class="red-text text-center">HAPPY DIWALI😃🎆</h1>
       <center><h2 style="color: white; font-weight: bold;"><span>May this Diwali brings you happiness , joy and success on this day and for the years to come by         
